--- a/.config/sampler/config.yml
+++ b/.config/sampler/config.yml
@@ -10,16 +10,20 @@ sparklines:
     scale: 0
     sample: memory_pressure | grep 'Pages free' | awk '{print $3}'
 textboxes:
+  - title: Date & Time
+    position: [[0, 0], [16, 8]]
+    color: 178
+    sample: date
   - title: Weather
-    position: [[0, 0], [17, 15]]
+    position: [[0, 8], [17, 15]]
     rate-ms: 1000000
     color: 178
     sample: curl wttr.in?0ATQF
-  - title: Disk Space
-    position: [[37, 0], [44, 18]]
-    rate-ms: 10000
+  - title: WiFi Speedtest
+    position: [[37, 0], [40, 18]]
+    rate-ms: 1000000
     color: 178
-    sample: df -h
+    sample: speedtest --simple
   - title: Docker containers stats
     position: [[18, 18], [60, 12]]
     rate-ms: 10000
@@ -31,8 +35,9 @@ textboxes:
     color: 178
     sample: spotify status | gsed 's/\x1b\[[0-9;]*m//g' | gsed 's/(B//'
   - title: NYC Prayer Times
-    position: [[0, 16], [17, 26]]
+    position: [[0, 22], [17, 19]]
     rate-ms: 100000000
     color: 178
     sample: curl -sSX GET http://api.aladhan.com/v1/timingsByCity\?city\=NYC\&country\=USA\&method\=2
-        | jq .data.timings
+        | jq .data.timings | grep -e "Fajr" -e "Dhuhr" -e "Asr" -e "Maghrib" -e "Isha"
+        | rev | cut -c 2- | rev
