--- a/.config/sampler/config.yml
+++ b/.config/sampler/config.yml
@@ -24,7 +24,7 @@ textboxes:
     rate-ms: 1000000
     color: 178
     sample: /Sy*/L*/Priv*/Apple8*/V*/C*/R*/airport -I | grep SSID | grep -v BSSID
-        | awk '{print $2}' && speedtest --simple
+        | gawk '{$1="";print $0}' | gsed "s/^[ \t]*//" && speedtest --simple
   - title: Docker containers stats
     position: [[18, 18], [60, 12]]
     rate-ms: 10000
